--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -19,7 +19,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -74,80 +73,6 @@
   font-weight: bold; /* font-bold */
   color: white; /* text-gray-800 */
   margin-bottom: 1rem; /* mb-6 */
-}
-
-.subtitle {
-  font-size: 1.125rem; /* text-lg */
-  color: white; /* text-gray-600 */
-  margin-bottom: 2rem; /* mb-8 */
-}
-
-.event-grid {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-left: 0.75rem; /* -mx-3 */
-  margin-right: 0.75rem; /* -mx-3 */
-}
-
-.event-card {
-  width: 100%; /* w-full */
-  padding: 0 0.75rem;
-  margin-bottom: 1.5rem; /* mb-6 */
-  cursor: pointer; /* cursor-pointer */
-}
-
-.event-card-inner {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background: white; /* bg-white */
-  border-radius: 0.5rem; /* rounded-lg */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* shadow-md */
-  transition: box-shadow 0.3s; /* transition-shadow duration-300 */
-}
-
-.event-card-inner2 {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: 1.5rem;
-}
-
-.event-card-inner:hover {
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* hover:shadow-lg */
-}
-
-.event-title {
-  font-size: 1.25rem; /* text-xl */
-  font-weight: 600; /* font-semibold */
-  color: #4b5563; /* text-gray-800 */
-  margin-bottom: 0.75rem; /* mb-3 */
-}
-
-.event-details {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  gap: 0.5rem; /* space-y-2 */
-}
-
-.event-detail {
-  display: flex;
-  align-items: center;
-  color: #4b5563; /* text-gray-600 */
-}
-
-.loading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 2.5rem; /* h-10 */
-  color: white; /* text-gray-600 */
-}
-
-.loading-observer {
-  height: 2.5rem; /* h-10 */
 }
 
 .icons {
@@ -246,7 +171,7 @@
 /* this is the css for the location page */
 
 .locations-container {
-  min-height: 100vh; /* min-h-screen */
+  height: auto;
 }
 
 .locations-content {
@@ -254,12 +179,12 @@
   flex-direction: column;
   flex-grow: 1;
   max-width: 105rem; /* max-w-[105rem] */
-  margin: 3rem auto; /* mt-12 */
+  margin: auto; /* mt-12 */
   width: 100%; /* w-full */
 }
 
 .locations-title {
-  font-size: 1.875rem; /* text-3xl */
+  font-size: 2.5rem; /* text-3xl */
   font-weight: bold; /* font-bold */
   color: white; /* text-gray-800 */
   margin-bottom: 1.5rem; /* mb-6 */
@@ -349,3 +274,5 @@
   margin-top: 1rem; /* mt-4 */
   color: #4b5563; /* text-gray-600 */
 }
+
+/* Admin.css */
